placeholder div for logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<div>
 			<center>
+			<div id="logo" style="height: 500px; width: 400px; background-color: blue;"></div>
 			Blackebergs elevkår.<br />
 			Coming soon! :D
 			</center>
